# friendly_telegram_bot

./: .gitignore  .pre-commit-config.yaml  alembic.ini  docker-compose.yml  main.py  pyproject.toml  settings.py  utils.py
bot/: constants.py  exceptions.py  settings.py  utils.py
bot/db/: __init__.py  base.py  models.py
bot/entities/: base_manager.py  base_query.py  base_validator.py
bot/entities/photo/: manager.py  validator.py
bot/entities/photo_to_user/: manager.py  validator.py
bot/entities/user/: manager.py  validator.py
bot/handlers/: params.py  photo.py  start.py
bot/middlewares/: exception.py  session.py
bot/queue/: consumer.py  main.py  producer.py  settings.py  storage.py
db/: base.py  models.py
entities/: base_manager.py  photo.py  photo_to_user.py  user.py
handlers/: photo.py  start.py
middlewares/: rps.py  session.py
migrations/: env.py
migrations/versions/: 0001_init.py
