[tool.poetry]
name = "friendly-telegram-bot"
version = "0.1.0"
description = ""
authors = ["Daria Baranova <mouseice@ya.ru>"]
readme = "README.md"
packages = [{include = "friendly_telegram_bot"}]

[tool.poetry.dependencies]
python = "3.8.10"
pre-commit = "^3.2.2"
pylint = "^2.17.2"
aiogram = "3.0.0b7"
sqlalchemy = "^2.0.10"
asyncpg = "^0.27.0"
alembic = "^1.10.3"
aio-pika = "^9.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
